--- a/get_facts.yml
+++ b/get_facts.yml
@@ -1,16 +1,21 @@
-- name: Get info for all installed services
-  ansible.windows.win_service_info:
-  register: service_info
+- name: Get Facts
+  hosts: all
 
-- name: Get info for a single service
-  ansible.windows.win_service_info:
-    name: WinRM
-  register: service_info
 
-- name: Get info for a service using its display name
-  ansible.windows.win_service_info:
-    name: Windows Remote Management (WS-Management)
+  tasks:
+  - name: Get info for all installed services
+    ansible.windows.win_service_info:
+    register: service_info
 
-- name: Find all services that start with 'win'
-  ansible.windows.win_service_info:
-    name: win*
+  - name: Get info for a single service
+    ansible.windows.win_service_info:
+      name: WinRM
+    register: service_info
+
+  - name: Get info for a service using its display name
+    ansible.windows.win_service_info:
+      name: Windows Remote Management (WS-Management)
+
+  - name: Find all services that start with 'win'
+    ansible.windows.win_service_info:
+      name: win*
