--- a/WindowsFacts.yml
+++ b/WindowsFacts.yml
@@ -2,13 +2,13 @@
 
 - hosts: Windows
 # Prompt for Username and Password #
-  vars_prompt:
-    - name: Windows_User_Prompt
-      prompt: "Enter Windows Username"
-      private: no
-    - name: Windows_Password_Prompt
-      prompt: "Enter Windows Password"
-      private: yes      
+  # vars_prompt:
+  #   - name: Windows_User_Prompt
+  #     prompt: "Enter Windows Username"
+  #     private: no
+  #   - name: Windows_Password_Prompt
+  #     prompt: "Enter Windows Password"
+  #     private: yes      
 
 # Ansible tasks #
   tasks:
