--- a/WindowsFacts.yml
+++ b/WindowsFacts.yml
@@ -189,32 +189,32 @@
         - { property: '# Windows' }        
       delegate_to: localhost
 
-# Create Mind Map # 
-    - name: create server_facts Mind Map 
-      shell: "markmap --no-open ../documentation/SERVERS/WINDOWS/markdown/server_facts.md -o ../documentation/SERVERS/WINDOWS/mindmap/server_facts.html"
-      register: markmap
-      delegate_to: localhost
+# # Create Mind Map # 
+#     - name: create server_facts Mind Map 
+#       shell: "markmap --no-open ../documentation/SERVERS/WINDOWS/markdown/server_facts.md -o ../documentation/SERVERS/WINDOWS/mindmap/server_facts.html"
+#       register: markmap
+#       delegate_to: localhost
 
-# Git Add / Commit / Push#
-- hosts: localhost
-  vars_prompt:
-    - name: git_commit_prompt
-      prompt: "Enter Git Commit Message"
-      private: no
-      tags: ['config','documentation']
-  tasks: 
-    - set_fact:
-        git_message: "{{git_commit_prompt}}"
-      tags: ['config','documentation']
-    - name: Git - Add
-      shell: "git add ../*"
-      register: gitadd
-      tags: ['config','documentation']
-    - name: Git - commit
-      shell: git commit -m "{{ git_message }}"
-      register: gitcommit
-      tags: ['config','documentation']
-    - name: Git - push
-      shell: git push 
-      register: gitpush
-      tags: ['config','documentation']
+# # Git Add / Commit / Push#
+# - hosts: localhost
+#   vars_prompt:
+#     - name: git_commit_prompt
+#       prompt: "Enter Git Commit Message"
+#       private: no
+#       tags: ['config','documentation']
+#   tasks: 
+#     - set_fact:
+#         git_message: "{{git_commit_prompt}}"
+#       tags: ['config','documentation']
+#     - name: Git - Add
+#       shell: "git add ../*"
+#       register: gitadd
+#       tags: ['config','documentation']
+#     - name: Git - commit
+#       shell: git commit -m "{{ git_message }}"
+#       register: gitcommit
+#       tags: ['config','documentation']
+#     - name: Git - push
+#       shell: git push 
+#       register: gitpush
+#       tags: ['config','documentation']
