--- a/main.yml
+++ b/main.yml
@@ -1,12 +1,12 @@
-- hosts: localhost
+- hosts: all
   connection: local
 
   #vars_files:
   #  - config.yml
 
-  roles:
-    - role: xxx.xxx
-      when: variable
+  # roles:
+  #   - role: xxx.xxx
+  #     when: variable
 
   tasks:
     - import_tasks: tasks/core_app.yml
