--- a/install_base_apps.yml
+++ b/install_base_apps.yml
@@ -1,6 +1,10 @@
 ---
-hosts: all
-- name: Install git
-  win_chocolatey:
-    name: git
-    state: present
+
+- name: Install base apps
+  hosts: all
+
+  tasks:
+  - name: Install git
+    win_chocolatey:
+      name: git
+      state: present
