--- a/import-subscription.yml
+++ b/import-subscription.yml
@@ -2,5 +2,5 @@
 
 - name: Set the license using a file
   tower_license:
-  manifest: "./tower/manifest_Tower-POC.zip"
+  manifest: "/vagrant/tower/manifest_Tower-POC.zip"
   eula_accepted: True
