--- a/import-subscription.yml
+++ b/import-subscription.yml
@@ -4,4 +4,4 @@
 - name: Set the license using a file
   tower_license:
   manifest: "/vagrant/tower/manifest_Tower-POC.zip"
-  eula_accepted: True
+  # eula_accepted: True
