commented out manifest

--- a/import-subscription.yml
+++ b/import-subscription.yml
@@ -5,5 +5,5 @@
 
   - name: Playbook to configure subscription
     tower_license:
-    manifest: "/vagrant/tower/manifest_Tower-POC.zip"
-    eula_accepted: True
+    # manifest: "/vagrant/tower/manifest_Tower-POC.zip"
+    
