moved name back

--- a/import-subscription.yml
+++ b/import-subscription.yml
@@ -3,7 +3,7 @@
   collections:
   - ansible.tower # when using ansible.tower
 
-  - name: Playbook to configure subscription
-    tower_license:
-    # manifest: "/vagrant/tower/manifest_Tower-POC.zip"
+- name: Set the license using a file
+  tower_license:
+  # manifest: "/vagrant/tower/manifest_Tower-POC.zip"
     
