--- a/import-subscription.yml
+++ b/import-subscription.yml
@@ -1,10 +1,15 @@
 ---
-- hosts: tower
-
-- name: Set the license using a file
-  tower_license:
-  # manifest: "/vagrant/tower/manifest_Tower-POC.zip"
+- name: Playbook for Using a Variety of Tower Modules
+  hosts: tower
+  gather_facts: false
   collections:
-  - ansible.tower # when using ansible.tower
+    - ansible.tower # when using ansible.tower
+  tasks:
+
+  - name: Set the license using a file
+    tower_license:
+    manifest: "/vagrant/tower/manifest_Tower-POC.zip"
+
+
 
     
