--- a/import-subscription.yml
+++ b/import-subscription.yml
@@ -1,6 +1,7 @@
 ---
 - name: Playbook for Using a Variety of Tower Modules
   hosts: tower
+  gather_facts: false
   collections:
     - ansible.tower # when using ansible.tower
 
